# Cargo manifest file for compiling Rust code.
#
# For more information, visit
# https://doc.rust-lang.org/cargo/reference/manifest.html.

[package]
authors = ["Macklan Weinstein <wolfgangwazzlestrauss@gmail.com>"]
description = "Digital audio editor for the terminal"
documentation = "https://wolfgangwazzlestrauss.github.io/sampitor"
edition = "2018"
homepage = "https://github.com/wolfgangwazzlestrauss/sampitor"
license = "MIT"
name = "sampitor"
readme = "README.md"
version = "0.0.1"

[dependencies]
clap = "3.0.0-beta.2"
color-eyre = "0.5.10"
crossterm = "0.19.0"
eyre = "0.6.5"
hound = "3.4.0"
rodio = "0.13.1"
tui = { version = "0.14.0", features = ["crossterm"], default-features = false }

[dev-dependencies]
assert_cmd = "1.0.3"
criterion = { version = "0.3.4", features = ["html_reports"] }
predicates = "1.0.7"
proptest = "0.10.1"
rstest = "0.6.4"
tempfile = "3.1.0"
test-case = "1.0.1"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
cargo-tarpaulin = "0.14.3"
