# Cargo manifest file for compiling Rust code.
#
# For more information, visit
# https://doc.rust-lang.org/cargo/reference/manifest.html.

[package]
authors = ["Macklan Weinstein <macklan.weinstein@gmail.com>"]
categories = ["command-line-utilities", "multimedia::audio"]
description = "Digital audio editor for the terminal"
documentation = "https://scruffaluff.github.io/sampitor"
edition = "2018"
homepage = "https://scruffaluff.github.io/sampitor"
keywords = ["audio", "editor", "terminal"]
license = "MIT"
name = "sampitor"
readme = "README.md"
repository = "https://github.com/scruffaluff/sampitor"
version = "0.0.2"

[dependencies]
clap = "3.0.0-beta.2"
color-eyre = "0.5.11"
crossterm = "0.19.0"
eyre = "0.6.5"
hound = "3.4.0"
rodio = "0.13.1"
tui = { version = "0.15.0", features = ["crossterm"], default-features = false }

[dev-dependencies]
approx = "0.4.0"
assert_cmd = "1.0.3"
criterion = { version = "0.3.4", features = ["html_reports"] }
predicates = "1.0.8"
proptest = "0.10.1"
rstest = "0.6.4"
tempfile = "3.1.0"
test-case = "1.0.1"
unicode-width = "0.1.8"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
cargo-tarpaulin = "0.14.3"

[[bench]]
name = "main"
harness = false
