# Cargo manifest file for compiling Rust code.
#
# For more information, visit
# https://doc.rust-lang.org/cargo/reference/manifest.html.

[package]
authors = ["Macklan Weinstein <macklan.weinstein@gmail.com>"]
categories = ["command-line-utilities", "multimedia::audio"]
description = "Digital audio editor for the terminal"
documentation = "https://scruffaluff.github.io/sampitor"
edition = "2021"
homepage = "https://scruffaluff.github.io/sampitor"
keywords = ["audio", "editor", "terminal"]
license = "MIT"
name = "sampitor"
readme = "README.md"
repository = "https://github.com/scruffaluff/sampitor"
version = "0.0.3"

[dependencies]
clap = { features = ["derive"], version = "^3.0.0" }
color-eyre = "^0.6.0"
crossterm = "^0.22.0"
eyre = "^0.6.0"
hound = "^3.4.0"
rodio = "^0.15.0"
tui = { default-features = false, features = ["crossterm"], version = "^0.17.0" }

[dev-dependencies]
approx = "^0.5.0"
assert_cmd = "^2.0.0"
criterion = { features = ["html_reports"], version = "^0.4.0" }
predicates = "^2.1.0"
proptest = "^1.0.0"
rstest = "^0.16.0"
tempfile = "^3.3.0"
test-case = "^2.2.0"
unicode-width = "^0.1.0"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
cargo-tarpaulin = "^0.23.0"

[[bench]]
harness = false
name = "main"
